django_codenerix_email (4.0.46) stable; urgency=low

  * EmailMessage form reordered

 -- Juanmi Taboada <juanmi@juanmitaboada.com>  Tue, 03 Feb 2026 12:20:00 +0200


django_codenerix_email (4.0.45) stable; urgency=low

  * Corrected message when using emails_send --all

 -- Juanmi Taboada <juanmi@juanmitaboada.com>  Tue, 03 Feb 2026 12:03:00 +0200


django_codenerix_email (4.0.44) stable; urgency=low

  * Improved emails_recv to support --file argument to read an email from a file

 -- Juanmi Taboada <juanmi@juanmitaboada.com>  Tue, 02 Feb 2026 10:16:00 +0200


django_codenerix_email (4.0.43) stable; urgency=medium

  * Correction to BOUNCE TYPE string detection

 -- Juanmi Taboada <juanmi@juanmitaboada.com>  Mon, 02 Feb 2026 10:12:00 +0200


django_codenerix_email (4.0.42) stable; urgency=medium

  * Sometimes encoded headers are smart strings that need str() to avoid the complexity
    of the object.

 -- Juanmi Taboada <juanmi@juanmitaboada.com>  Wed, 20 Oct 2025 07:04:00 +0200


django_codenerix_email (4.0.42) stable; urgency=medium

  * Added ignore to prevent decoding errors while processing messages for mixed encodes

 -- Juanmi Taboada <juanmi@juanmitaboada.com>  Wed, 20 Oct 2025 06:45:00 +0200


django_codenerix_email (4.0.41) stable; urgency=medium

  * Prevent crashes from invalid charsets in received messages

 -- Juanmi Taboada <juanmi@juanmitaboada.com>  Wed, 20 Oct 2025 06:40:00 +0200


django_codenerix_email (4.0.40) stable; urgency=medium

  * Corrected the way EmailMessage show bounces to improve performance

 -- Juanmi Taboada <juanmi@juanmitaboada.com>  Wed, 08 Oct 2025 08:06:00 +0200


django_codenerix_email (4.0.39) stable; urgency=medium

  * Added options to chosse the IMAP selector and to DELETE emails or set them as SEEN for a more granular control

 -- Juanmi Taboada <juanmi@juanmitaboada.com>  Wed, 08 Oct 2025 08:06:00 +0200


django_codenerix_email (4.0.38) stable; urgency=medium

  * Added filtering support for IMAP receiving emails
