@@ -1,4 +1,4 @@
-__version__ = "4.0.46"
+__version__ = "4.0.47"
 
 __authors__ = [
     "Juan Miguel Taboada Godoy <juanmi@juanmitaboada.com>",
