@@ -19,7 +19,7 @@
     ng-class="{'info': (!row.email__pk) && (!row.bounce_type), 'warning': row.bounce_type=='S', 'danger': row.bounce_type=='H', 'text-warning': row.bounce_type=='S', 'text-danger': row.bounce_type=='H'}"
     ng-click="$event.stopPropagation();"
     class="text-nowrap">
-    <a href='/codenerix_email/emailmessages#/{{row.email__pk}}'>{{row.email__uuid|codenerix}}</a>
+    <a href='/codenerix_email/emailmessages#/{{row.email__pk}}' title="{{row.email__uuid|codenerix}}">{{row.email__eto|codenerix}}</a>
 </td>
 <td
     ng-class="{'info': (!row.email__pk) && (!row.bounce_type), 'warning': row.bounce_type=='S', 'danger': row.bounce_type=='H', 'text-warning': row.bounce_type=='S', 'text-danger': row.bounce_type=='H'}"
