@@ -1,3 +1,10 @@
+django_codenerix_email (4.0.47) stable; urgency=low
+
+  * Max retries is not considered in emails_send management command
+
+ -- Juanmi Taboada <juanmi@juanmitaboada.com>  Tue, 03 Feb 2026 12:20:00 +0200
+
+
 django_codenerix_email (4.0.46) stable; urgency=low
 
   * EmailMessage form reordered
